# oslsim

./: .gitattributes  CMakeLists.txt  LICENSE.md  README.md  package.xml
config/: joints.yaml  osl_ankle.yaml  osl_knee.yaml
data/: RampAscent-1.csv  RampAscent-2.csv  RampAscent-3.csv  RampDescent-1.csv  RampDescent-2.csv  RampDescent-3.csv  StairAscent-1.csv  StairAscent-2.csv  StairAscent-3.csv  StairDescent-1.csv  StairDescent-2.csv  StairDescent-3.csv  Walking-1.csv  Walking-2.csv  Walking-3.csv  angles.pkl  gyros.pkl  walking_01.csv  walking_02.csv  walking_03.csv
launch/: main.launch
meshes/: foot.dae  footL.STL  footL.dae  footLCollider.STL  footR.STL  footR.dae  footRCollider.STL  pylonL.dae  pylonLCollider.STL  pylonR.dae  pylonRCollider.STL  shin.dae  thigh.dae  thighLCollider.STL  thighRCollider.STL
scripts/: controller.py  loadcell.py  test.py  tuner.py  walk.py
urdf/: oslsim.urdf  oslsim.xacro
worlds/: main.world
