<?xml version="1.0"?>
<package>
  <name>oslsim</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for oslsim</p>
    <p>This package contains configuration data, 3D models and launch files
for OSL</p>
  </description>
  <author>Senthur Raj</author>
  <maintainer email="imsenthur@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>